Changed the vertical layout of the forms to horizontal and fixed horizontal scroll bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -112,3 +112,8 @@ nav a img
 {
 	width: 300px !important;
 }
+
+.no-container {
+  
+    margin-right: 0 !important; 
+}
